--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.1",
+    "@mui/types": "^7.2.21",
     "@reduxjs/toolkit": "^2.5.0",
     "bootstrap": "^5.3.3",
     "idb": "^8.0.1",
@@ -40,7 +41,7 @@
     "sass-embedded": "^1.83.4",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
+    "vite": "^6.0.11",
     "vite-plugin-svgr": "^4.3.0"
   }
 }
